<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediTrack</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="add_textlabel">Please select a characteristic</string>
    <string name="button_save">Save</string>
    <string name="bloodpressure_low">Diastolic</string>
    <string name="bloodpressure_high">Systolic</string>
    <string name="feeding_label">Feeding</string>
    <string name="medication_label">Medication</string>
    <string name="medication_dropdown_prompt">Choose a medication&#8230;</string>
    <string name="title_activity_summ">SummActivity</string>
    <!-- choices of kinds of data to enter in -->
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="pulse_oxygen">Pulse Oxygen Saturation</string>
    <string name="feeding_time">Feeding Time</string>
    <string name="feeding_amount">Feeding Notes (amount, etc.)</string>
    <string name="feeding_goal">Feeding Goal</string>
    <string name="weight">Weight</string>
    <string name="medication_time">Medication Time</string>
    <string name="medication_amount">Medication Notes</string>
    <string name="next">Next</string>
    <string name="title_activity_summ_tframe">SummTFrameActivity</string>
    <!-- Summary Page -->
    <string name="summ_title">Choose the items you would like to view</string>
    <string name="last_7">Last 7 Days</string>
    <string name="last_14">Last 14 Days</string>
    <string name="last_30">Last 30 Days</string>
    <string name="pick_date">Pick Date</string>
    <string name="chooseOne">Choose one</string>
    <string name="title_of_tFrame">Pick the time frame</string>
    <string name="or_pick_own_date">Or pick your own date</string>
    <string name="begin">Start Date</string>
    <string name="end">End Date</string>
    <string name="view_summary">See Summary</string>
    <string name="reset">Reset</string>
    <string name="summary">Summary</string>
    <!-- End for Summary Page -->
    <string name="title_activity_view">ViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="patient_add_button">Add</string>
    <string name="patient_view_button">View</string>
    <string name="patient_edit_button">Edit</string>
    <string name="patient_summary_button">Summary</string>
    <string name="patient_baby_name">Baby Name</string>
    <string name="baby_image">Baby Picture</string>
    <string name="welcome">Welcome to MediTrack</string>
    <string name="fname">First Name</string>
    <string name="surname">Last Name</string>
    <string name="email">Email</string>
    <string name="confPW">Confirm Password</string>
    <string name="baby">My Baby: </string>
    <string name="newRec">Start a record for my baby</string>
    <string name="hasRec">My baby has a record with MediTrack</string>
    <string name="babyname">&quot;Baby's Name&quot;</string>
    <string name="dob">Birthday:</string>
    <string name="gender">Gender:</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="pickDate">Pick Date</string>
    <string name="title_activity_main_summ">MainSummActivity</string>
    <string name="doctors">Pick Doctor</string>
    <string name="noDoc">Skip</string>
    <string name="confEmail">Confirm Email</string>
    <string name="babyPicture">Upload a baby picture</string>
    
    <!-- Strings used in preferences.xml -->
    <string name="prefs_add_baby">Add new baby</string>



    <string-array name="options">
        <item >View</item>
        <item >Summary</item>
    </string-array>

</resources>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediTrack</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="add_textlabel">Please select a characteristic</string>
    <string name="button_save">Save</string>
    <string name="bloodpressure_low">Diastolic</string>
    <string name="bloodpressure_high">Systolic</string>
    <string name="feeding_label">Feeding</string>
    <string name="medication_label">Medication</string>
    <string name="medication_dropdown_prompt">Choose a medication&#8230;</string>
    <string name="title_activity_summ">SummActivity</string>
    <!-- choices of kinds of data to enter in -->
    <string name="heart_rate">Heart Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="pulse_oxygen">Pulse Oxygen</string>
    <string name="feeding_time">Feeding Time</string>
    <string name="feeding_amount">Feeding Notes (amount, etc.)</string>
    <string name="weight">Weight</string>
    <string name="medication_time">Medication Time</string>
    <string name="medication_amount">Medication Notes</string>
    <string name="next">Next</string>
    <string name="title_activity_summ_tframe">SummTFrameActivity</string>
    <!-- Summary Page -->
    <string name="summ_title">Choose the items you would like to view</string>
    <string name="last_7">Last 7 Days</string>
    <string name="last_14">Last 14 Days</string>
    <string name="last_30">Last 30 Days</string>
    <string name="pick_date">Pick Date</string>
    <string name="chooseOne">Choose one</string>
    <string name="title_of_tFrame">Pick the time frame</string>
    <string name="or_pick_own_date">Or pick your own date</string>
    <string name="begin">Start Date</string>
    <string name="end">End Date</string>
    <string name="view_summary">See Summary</string>
    <string name="reset">Reset</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="patient_add_button">Add</string>
    <string name="patient_view_button">View</string>
    <string name="patient_edit_button">Edit</string>
    <string name="patient_summary_button">Summary</string>
    <string name="patient_baby_name">Baby Name</string>
    <string name="baby_image">Baby Picture</string>
    <string name="welcome">Welcome to MediTrack</string>
    <string name="fname">First Name</string>
    <string name="surname">Last Name</string>
    <string name="email">Email</string>
    <string name="confPW">Confirm Password</string>
    <string name="baby">My Baby: </string>
    <string name="newRec">Start a record for my baby</string>
    <string name="hasRec">My baby has a record with MediTrack</string>
    <string name="babyname">Baby\'s First Name</string>
    <string name="dob">Birthday:</string>
    <string name="gender">Gender:</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="pickDate">Pick Date</string>
    <string name="title_activity_main_summ">MainSummActivity</string>
    <string name="doctors">Pick Doctor</string>
    <string name="noDoc">Skip</string>
    <string name="confEmail">Confirm Email</string>
    <string name="babyPicture">Upload a baby picture</string>
    <string name="babysurname">Baby\'s Last Name</string>
    
    <!-- Strings used in preferences.xml -->
    <string name="prefs_add_baby">Add new baby</string>


</resources>
>>>>>>> dfa522b4b6b71dd0383af17212685126789c9058
