<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SummActivity" >

    <TextView
        android:id="@+id/firstDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summ_title"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOpSel"
        android:text="@string/heart_rate" />

    <CheckBox
        android:id="@+id/blood_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOpSel"
        android:text="@string/blood_pressure" />

    <CheckBox
        android:id="@+id/pulse_oxygen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOpSel"
        android:text="@string/pulse_oxygen" />

    <CheckBox
        android:id="@+id/feeding_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOpSel"
        android:text="@string/feeding_goal" />


    <CheckBox
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onOpSel"
        android:text="@string/weight" />


    <Button
        android:id="@+id/summ_sel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="buttonClicked"
        android:text="@string/next" />

</LinearLayout>