<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/char_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_pressure"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/char_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bloodpressure_low"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>
    
       <EditText
        android:id="@+id/char_data1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bloodpressure_high"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

</LinearLayout>