<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/babyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/babyname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/babyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" >
        </EditText>

        <TextView
            android:id="@+id/DateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/dob"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPickDateClicked"
                android:text="@string/pickDate" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/boy" />

            <RadioButton
                android:id="@+id/hasRec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/girl" />
        </RadioGroup>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >

             <Button
                 android:id="@+id/button2"
                 android:layout_width="194dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/doctors" />

             <Button
                 android:id="@+id/button3"
                 android:layout_width="108dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/noDoc" />
         </LinearLayout>

    </LinearLayout>

</ScrollView>