<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_edittext"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edittext"
        android:onClick="onSignupButtonClicked"
        android:text="@string/signup"/>
    
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/signup_button"
        android:layout_alignBottom="@id/signup_button"
        android:layout_toRightOf="@id/signup_button"
        android:onClick="onLoginButtonClicked"
        android:text="@string/login" />

</RelativeLayout>