<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Baby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baby"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/babyRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/newRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/newRec" />

        <RadioButton
            android:id="@+id/hasRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasRec" />

        <RadioButton
            android:id="@+id/doctorreg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:text="@string/docregis"/>
        
    </RadioGroup>

    <EditText
        android:id="@+id/doctorCodeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:visibility="invisible"
        android:hint="Doctor Code"
        />

    

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="onNextButtonClicked"
        android:text="@string/next" />

</LinearLayout>